<resources>
    <string name="app_name">ViewModelJa</string>

    <!-- api server url -->
    <string name="api_server_url">https://dummyjson.com/</string>

    <!-- dialog -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- alert -->
    <string name="alert_dialog_loading_data">載入中...</string>
    <string name="alert_dialog_connection_timeout">連線逾時</string>
    <string name="alert_dialog_connection_error">網路狀態異常，請重新檢查連線或稍後再試</string>

    <string name="main_login">登入</string>
    <string name="main_logout">登出</string>
    <string name="main_country_search">Country Search 範例</string>
    <string name="main_rotated_one">翻轉(未MVVM)</string>
    <string name="main_rotated_two">翻轉(使用MVVM)</string>

    <string name="login_login">登入</string>
    <string name="login_account">帳號</string>
    <string name="login_account_hint">請輸入帳號</string>
    <string name="login_pwd">密碼</string>
    <string name="login_pwd_hint">請輸入密碼</string>
    <string name="login_login_success">登入成功</string>

    <string name="country_search">搜尋</string>
    <string name="country_search_taipei">台北 taipei</string>
    <string name="country_search_tokyo">東京 tokyo</string>

    <string name="view_model_test">MVVM測試文字</string>
</resources>