<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.example.viewmodelja.ui.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_9dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_account"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_16sp" />

            <EditText
                android:id="@+id/etAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_account_hint"
                android:text="@={loginViewModel.getAccountLiveData}"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_9dp"
                android:text="@string/login_pwd"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_16sp" />

            <EditText
                android:id="@+id/etPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_pwd_hint"
                android:inputType="textPassword"
                android:text="@={loginViewModel.getPwdLiveData}"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_16sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_9dp"
                android:text="@string/login_login"
                android:onClick="@{loginViewModel.onClickLogin}"
                android:textSize="@dimen/textsize_18sp" />
        </LinearLayout>
    </RelativeLayout>


</layout>