<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_9dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_9dp"
        android:text="@string/main_login"
        android:textSize="@dimen/textsize_18sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_logout"
        android:textSize="@dimen/textsize_18sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_country_search"
        android:textSize="@dimen/textsize_18sp" />

</LinearLayout>